syntax = "proto3";

package _;

message StaffLocation {
    enum LocationType {
        LINE = 0;
        SPACE = 1;
    }
    LocationType type = 1;
    int32 number = 2;
}
